--- a/src/app/user/admin/collage/collage.component.html
+++ b/src/app/user/admin/collage/collage.component.html
@@ -23,7 +23,7 @@
           <svg class="w-4 h-4 mx-1 text-gray-400 rtl:rotate-180" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 6 10" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
             <path stroke-linecap="round" stroke-linejoin="round" d="m1 9 4-4-4-4"></path>
           </svg>
-          <span class="font-semibold text-gray-700 dark:text-gray-300">Collage</span>
+          <span class="font-semibold text-gray-700 dark:text-gray-300">College</span>
         </li>
       </ol>
 
@@ -38,7 +38,7 @@
           <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 16 20" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
             <path stroke-linecap="round" stroke-linejoin="round" d="M3 5v10M3 5a2 2 0 1 0 0-4 2 2 0 0 0 0 4Zm0 10a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm9-10v.4A3.6 3.6 0 0 1 8.4 9H6.61A3.6 3.6 0 0 0 3 12.605M14.458 3a2 2 0 1 1-4 0 2 2 0 0 1 4 0Z"></path>
           </svg>
-          <h1 class="text-white">New Collage</h1>
+          <h1 class="text-white">New College</h1>
           <svg class="w-3 h-3 ml-2" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 10 6" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
             <path stroke-linecap="round" stroke-linejoin="round" d="m1 1 4 4 4-4"></path>
           </svg>
@@ -55,7 +55,7 @@
               #
             </th>
             <th scope="col" class="px-6 py-3 text-xs font-semibold tracking-wider text-gray-700 uppercase dark:text-gray-300">
-              Collage
+              College
             </th>
             <th scope="col" class="px-6 py-3 text-xs font-semibold tracking-wider text-gray-700 uppercase dark:text-gray-300">
               Name
@@ -101,7 +101,7 @@
       <div class="p-2 mt-20 bg-white rounded-lg shadow-lg " style="width: 500px;">
 
         <div class="grid justify-between grid-flow-col">
-          <h3 class="mt-2 font-semibold text-md">New Collage</h3>
+          <h3 class="mt-2 font-semibold text-md">New College</h3>
           <div class="flex justify-end ">
             <button (click)="closeModal()" class="px-4 py-2 text-white bg-red-500 rounded hover:bg-red-600">
               Close
