--- a/src/app/user/admin/department/department.component.html
+++ b/src/app/user/admin/department/department.component.html
@@ -55,7 +55,7 @@
               #
             </th>
             <th scope="col" class="px-6 py-3 text-xs font-semibold tracking-wider text-gray-700 uppercase dark:text-gray-300">
-              Collage Name
+              College Name
             </th>
             <th scope="col" class="px-6 py-3 text-xs font-semibold tracking-wider text-gray-700 uppercase dark:text-gray-300">
              Department Name
@@ -166,7 +166,7 @@
                 <label
                   for="collage"
                   class="block mb-2 text-sm font-bold text-gray-900 dark:text-white"
-                  >Collage</label
+                  >College</label
                 >
 
                 <select
