--- a/src/app/user/timetable-master/collage/collage.component.html
+++ b/src/app/user/timetable-master/collage/collage.component.html
@@ -55,7 +55,7 @@
               #
             </th>
             <th scope="col" class="px-6 py-3 text-xs font-semibold tracking-wider text-gray-700 uppercase dark:text-gray-300">
-              Collage
+              College
             </th>
             <th scope="col" class="px-6 py-3 text-xs font-semibold tracking-wider text-gray-700 uppercase dark:text-gray-300">
               Name
@@ -117,7 +117,7 @@
                 <label
                   for="collage"
                   class="block mb-2 text-sm font-bold text-gray-900 dark:text-white"
-                  >Collage Name</label
+                  >College Name</label
                 >
                 <input
                   [(ngModel)]="name"
