--- a/src/app/user/coordinator/coordinator-course/coordinator-course.component.html
+++ b/src/app/user/coordinator/coordinator-course/coordinator-course.component.html
@@ -285,7 +285,7 @@
     <label for="bordered-checkbox-1" class="w-full py-4 text-sm font-medium text-gray-900 ms-2 dark:text-gray-300">Tutorial</label>
 </div>
 <div class="flex items-center border border-gray-200 rounded-sm ps-4 dark:border-gray-700">
-    <input checked id="bordered-checkbox-2" type="checkbox" [(ngModel)]="is_lecture" disabled="" name="is_lecture" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+    <input checked id="bordered-checkbox-2" type="checkbox" [(ngModel)]="is_lecture"  name="is_lecture" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
     <label for="bordered-checkbox-2" class="w-full py-4 text-sm font-medium text-gray-900 ms-2 dark:text-gray-300">Lecture</label>
 </div>
 <div class="flex items-center border border-gray-200 rounded-sm ps-4 dark:border-gray-700">
